--- a/style2.css
+++ b/style2.css
@@ -64,6 +64,68 @@ input[type='checkbox'] {
 	color: #00cc99;
 	}
 
+/*CONTENT*/
+.main {
+	text-align: center;
+	width: 960px;
+    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto
+	}
+.content {
+	text-align: left;
+	display: inline-block;
+	width: 530px;
+	vertical-align: top;
+	height: 450px;
+	margin-left: .5em;
+	background-color: #ffffff;
+	border: 1px solid rgb(250,250,250);
+	box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+	}
+.logo-text {
+	display: inline-block;
+	border-bottom: 1px dashed #999999;
+	height: 4.5em;
+	width: 100%;
+	padding-left: 1.5em;
+	padding-top: 1.7em;
+	box-sizing: border-box;
+	font-size: 1.2em;
+	}
+.post {
+	padding: 1.5em;
+	padding-top: 1.5em;
+	}
+.post h1 {
+	font-size: 1.7em;
+	}
+.date { 
+	padding-top: 1em;
+	font-size: .8em;
+	font-weight: bolder;
+	color: #666666;
+	}
+.text {
+	padding-top: 1em;
+	line-height: 1.5em;
+	color: #666666;
+	}
+.read-more {
+	padding-top: 1em;
+	font-weight: bolder;
+	font-size: .8em;
+	}
+.sidebar {
+	text-align: left;
+	display: inline-block;
+	width: 230px;
+	height: 300px;
+	vertical-align: top;
+	background-color: #ffffff;
+	border: 1px solid rgb(250,250,250);
+	box-shadow: 0 0 5px rgba(0,0,0,0.1);
+	}
 
 @media screen and (max-width: 720px){
     .nav-link {
