--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,7 @@ body {
 	background-color: rgb(250, 250, 250);
 	font-family: 'Raleway', sans-serif;
 	}
+* {box-sixing: border-box;}
 a {
 	text-decoration: none;
 	
@@ -19,8 +20,11 @@ input[type='text'] {
 
 header {
 	display: block;
+	width: 100%;
 	height: 3em;
-	
+	position: fixed;
+	top: 0;
+	z-index: 1000;
 	box-shadow: 0 0 5px rgba(0,0,0,0.2);
 	background: #000000;
 	}
@@ -67,18 +71,23 @@ input[type='checkbox'] {
 /*CONTENT*/
 .main {
 	text-align: center;
-	width: 960px;
+
     margin-top: 3em;
     margin-left: auto;
     margin-right: auto
 	}
 .content {
+	display: inline-block;
+	max-width: 530px;
+	width: 60.215053763440862%;
+	vertical-align: top;
+	height: auto;
+	}
+.content__post {
 	text-align: left;
 	display: inline-block;
-	width: 530px;
-	vertical-align: top;
-	height: 450px;
 	margin-left: .5em;
+	margin-top: 1em;
 	background-color: #ffffff;
 	border: 1px solid rgb(250,250,250);
 	box-shadow: 0 0 5px  rgba(0,0,0,0.1);
@@ -108,8 +117,9 @@ input[type='checkbox'] {
 	}
 .text {
 	padding-top: 1em;
-	line-height: 1.5em;
+	line-height: 1.2em;
 	color: #666666;
+	font-size: 14px;
 	}
 .read-more {
 	padding-top: 1em;
@@ -117,17 +127,32 @@ input[type='checkbox'] {
 	font-size: .8em;
 	}
 .sidebar {
-	text-align: left;
 	display: inline-block;
-	width: 230px;
+	max-width: 230px;
+	width: 24.731182795698925%;
 	height: 300px;
+	margin-top: 1em;
 	vertical-align: top;
 	background-color: #ffffff;
 	border: 1px solid rgb(250,250,250);
 	box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	}
-
-@media screen and (max-width: 720px){
+.my-foto {
+	max-width: 100%;
+	}
+.my-name {
+	
+	padding-top: 1em;
+	}
+.my-name h1 {
+	font-size: 1.3em;
+	}
+.my-job {
+	font-size: .8em;
+	padding-top: .7em;
+	color: #666666;
+	}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024) {
     .nav-link {
 		display: block;
 		height: 2.5em;
@@ -173,10 +198,125 @@ input[type='checkbox'] {
         transform: scaleY(1);
 		opacity: 1;
     }
+    .main {
+	text-align: center;
+	max-width: 1024px;
+	min-width: 768px;
+	width: 100%;
+    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto
+	}
+	.content {
+		width: 100%;
+		}
+	.sidebar {
+		display: block;
+		max-width: 1024px;
+	    min-width: 768px;
+	    width: 100%;
+	    height: auto;
+	    
+	    margin-top: 5em;
+	    padding-bottom: 1em;
+		}
+	.my-foto {
+		display: none;
+		}
+	.content__post {
+		margin-left: 0;
+		}
+	.logo-text {
+		display: none;
+		}
+	.text {
+		font-size: 1.2em;
+		}
 }
 	
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+ .nav-link {
+		display: block;
+		height: 2.5em;
+		padding-left: 15px;
+	    padding-top: 1.25em;
+		border: 1px solid black;
+		background-color: black;
+		}
+	.nav-link-search {
+		display: block;
+		height: 2.5em;
+		margin-left: 0;
+		margin-right: 0;
+		border: 1px solid black;
+		background-color: black;
+		}
+	.search-pole {
+		border: 1px solid #333333;
+		height: 2.5em;
+		width: 100%;
+		box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+		font-family: 'Raleway', sans-serif;
+		}
 	
+		
+	.header nav {
+		/*display: none;*/
+		transition: 0.4s;
+		transform-origin: top center;
+		transform: scaleY(0);
+		opacity: 0;
+		}
 	
+	.header label.toogleMenu {
+		display: block;
+		}
+	.header input.toogleMenu:checked + label.toogleMenu {
+		background: black;
+		color: #00cc99;
+		}
+    .header input.toogleMenu:checked ~ nav {
+    	/*display: block;*/
+        transform: scaleY(1);
+		opacity: 1;
+    }
+	.main {
+	text-align: center;
+	max-width: 480px;
+	min-width: 320px;
+	width: 100%;
+    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto
+	}
+	.content {
+		width: 100%;
+		}
+	.sidebar {
+		max-width: 480px;
+	    min-width: 320px;
+	    width: 100%;
+	    height: auto;
+	    
+	    margin-top: 2em;
+	    padding-bottom: 1em;
+		}
+	.my-foto {
+		display: none;
+		}
+	.content__post {
+		margin-left: 0;
+		}
+	.logo-text {
+		display: none;
+		}
+	.text {
+		font-size: 1.2em;
+		}
+}
+ 
+
 	
 	
 	
